--- a/src/pages/logisticsManage/BC_customsClearance/YTO/index.less
+++ b/src/pages/logisticsManage/BC_customsClearance/YTO/index.less
@@ -2,12 +2,13 @@
   width: 100%;
   height: 100%;
   background-color: #fff;
+  overflow: auto;
 
   .radioBtn{
-    margin: 10px 0 0 10px;
+    margin: 10px 0 10px 10px;
   }
 
   .btnLine {
-    padding: 10px;
+    padding: 0 10px 10px;
   }
 }
