--- a/src/pages/logisticsManage/SKT/uploadOrder/index.less
+++ b/src/pages/logisticsManage/SKT/uploadOrder/index.less
@@ -4,8 +4,10 @@
   height: 100%;
   overflow: auto;
 
-  .btnLine,.tadioLine {
+  .tadioLine {
+    padding: 10px 0 0 10px;
+  }
+  .btnLine {
     padding: 10px;
   }
-
 }
