返点 - 待审核小票 - 优化汇率输入问题 停止阻止输入0.0以后小数行为

--- a/src/pages/rebateManage/awaitingExamine/index.less
+++ b/src/pages/rebateManage/awaitingExamine/index.less
@@ -5,6 +5,11 @@
 }
 
 .awaitingExamine {
+  // InputNumber 去除上下箭头方法
+  .ant-input-number-handler-wrap{
+    display: none;
+  }
+
   width: 100%;
   height: 100%;
   background-color: #fff;
