--- a/src/pages/rebateManage/awaitingExamine/index.less
+++ b/src/pages/rebateManage/awaitingExamine/index.less
@@ -5,16 +5,16 @@
 }
 
 .awaitingExamine {
-  // InputNumber 去除上下箭头方法
-  .ant-input-number-handler-wrap{
-    display: none;
-  }
-
   width: 100%;
   height: 100%;
   background-color: #fff;
   overflow: auto;
   position: relative;
+
+  // InputNumber 去除上下箭头方法
+  .ant-input-number-handler-wrap{
+    display: none;
+  }
 
   // 原生input type="number" 去除方法
   input::-webkit-outer-spin-button,
@@ -22,27 +22,14 @@
     -webkit-appearance: none !important;
   }
 
+  .leftTicketNum {
+    font-size: 18px;
+    line-height: 40px;
+    margin-left: 20px;
+  }
+
   .ant-form-item {
     margin-bottom: 10px;
-  }
-
-  .ant-badge {
-    margin-right: 20px;
-  }
-
-  .ant-radio-button-wrapper {
-    border-radius: 4px;
-  }
-
-  .shopSelect {
-    width: 100%;
-    height: 64px;
-    line-height: 64px;
-    padding-left: 32px;
-
-    .selectShops {
-      width: 200px;
-    }
   }
 
   .noTicket {
@@ -52,11 +39,6 @@
 
     .iconSmile {
       color: #52c41a;
-      margin-right: 10px;
-    }
-
-    .iconShop {
-      color: #1890ff;
       margin-right: 10px;
     }
   }
