btnLine contentMain 样式全局化 修复class重复bug 优化组件命名 重复/歧义

--- a/src/pages/commoditiesManage/commoditiesDatabase/index.less
+++ b/src/pages/commoditiesManage/commoditiesDatabase/index.less
@@ -1,21 +1,12 @@
 .dataBase{
-  background-color: #fff;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
 
-  .radioBtn {
-    margin: 10px;
-  }
-
-  .searchLine {
+  .btnLine {
     overflow: hidden;
-    margin-bottom: 10px;
 
     .createNew,.exportExcelBtn,.importExcelBtn {
       display: block;
       float: left;
-      margin-left: 10px;
+      //margin-left: 10px;
     }
 
     .searchInput{
