--- a/src/App.less
+++ b/src/App.less
@@ -7,6 +7,18 @@
   background-color: #777;
 }
 
+// 主要区域公共样式
+.contentMain {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #fff;
+
+  .btnLine {
+    margin: 10px;
+  }
+}
+
 // 标题公共样式
 .title {
   .titleMain {
