--- a/src/pages/rebateManage/setRebate/index.less
+++ b/src/pages/rebateManage/setRebate/index.less
@@ -1,13 +1,5 @@
 .setRebate {
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  overflow: auto;
   position: relative;
-
-  .btnLine {
-    padding-bottom: 10px;
-  }
 
   .shopSelect {
     width: 100%;
@@ -35,6 +27,7 @@
   }
 
   .btnLine {
+    margin-top: 0 !important;
 
     .createNew {
       margin-left: 20px;
