--- a/src/pages/reservationService/globalErrands/assess/index.less
+++ b/src/pages/reservationService/globalErrands/assess/index.less
@@ -1,11 +1,3 @@
-.accounts {
-  background-color: #fff;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
+.globalErrandsAccounts {
 
-  .btnLine {
-    padding: 10px;
-  }
 }
-
