--- a/src/pages/reservationService/globalErrands/order/index.less
+++ b/src/pages/reservationService/globalErrands/order/index.less
@@ -1,15 +1,7 @@
-
 .globalErrands{
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: #fff;
 
-  .btnLine{
-    margin-bottom: 10px;
-  }
   .menu-selection {
-    margin: 10px 0 10px 10px
+    margin: 10px 0 0 10px
   }
 
   .searchInput{
