--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -3,40 +3,9 @@
   padding: 10px;
 
   .title {
-    margin: 0;
+    //margin: 0;
     font-size: 36px;
-    padding: 0 0 10px 10px;
-  }
-  
-  .dividingLine {
-    width: 100%;
-    height: 1px;
-    background-color: #ddd;
+    //padding: 0 0 10px 10px;
   }
 
-  .shot.dividingLine {
-    width: 260px;
-    margin-bottom: 8px;
-  }
-
-  .main {
-    padding: 10px;
-    font-size: 16px;
-    color: #666;
-
-    .updateInfo {
-      margin-bottom: 10px;
-
-      .infoTitle {
-        color: #999;
-        padding: 8px;
-        line-height: 18px;
-      }
-      p {
-        overflow: hidden;
-        margin: 0;
-        line-height: 18px;
-      }
-    }
-  }
 }
